# Flclash_fix

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  README_zh_CN.md  pubspec.yaml  setup.dart
.github/: android-public-keystore.base64
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
android/: gradle.properties
android/app/: build.gradle.kts  google-services.json
android/core/: build.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt  core.cpp  jni_helper.cpp
android/service/: build.gradle.kts
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  action_test.go  bride.c  bride.go  bride.h  common.go  config_apply_test.go  constant.go  darwin_tun_helper.go  darwin_tun_helper_stub.go  darwin_tun_protocol.go  darwin_tun_protocol_test.go  dial_pipe.go  dial_socket.go  geo_update_lifecycle_test.go  go.mod  hub.go  hub_test.go  launch_identity.go  launch_identity_darwin.go  launch_identity_linux.go  launch_identity_linux_test.go  launch_identity_windows.go  lib.go  lib_stub.go  lifecycle_test.go  main.go  path_util_test.go  privilege_linux.go  privilege_linux_test.go  privilege_unix.go  privilege_windows.go  proxy_exit.go  proxy_exit_test.go  proxy_geo.go  proxy_geo_test.go  proxy_snapshot_test.go  server.go  server_lifecycle_cgo.go  server_timeout_test.go
lib/: application.dart  state.dart
lib/common/: clear_transaction.dart  color.dart  common.dart  compute.dart  constant.dart  durable_file.dart  file.dart  fixed.dart  function.dart  future.dart  http.dart  iterable.dart  javascript.dart  launch.dart  link.dart  path.dart  picker.dart  preferences.dart  radius.dart  render.dart  request.dart  resource_limits.dart  restore_transaction.dart  storage_recovery.dart  system.dart  task.dart  theme.dart  tray.dart
lib/core/: controller.dart  event.dart  interface.dart  lib.dart  service.dart  transport.dart
lib/database/: database.dart  groups.dart  profiles.dart  rules.dart  scripts.dart
lib/enum/: enum.dart
lib/features/overwrite/: rule.dart
lib/l10n/: l10n.dart
lib/l10n/intl/: messages_en.dart  messages_ja.dart  messages_ru.dart  messages_zh_CN.dart
lib/manager/: android_manager.dart  app_manager.dart  connectivity_manager.dart  core_manager.dart  hotkey_manager.dart  proxy_manager.dart  status_manager.dart  theme_manager.dart  tile_manager.dart  tray_manager.dart  vpn_manager.dart  window_manager.dart
lib/models/: clash_config.dart  common.dart  config.dart  core.dart  profile.dart  state.dart
lib/pages/: editor.dart  home.dart
lib/plugins/: app.dart  service.dart  tile.dart
lib/providers/: action.dart  app.dart  database.dart  state.dart
lib/providers/actions/: backup_action.dart  common_action.dart  core_action.dart  geo_resource_action.dart  profiles_action.dart  proxies_action.dart  setup_action.dart  setup_mutex.dart  store_action.dart  system_action.dart  theme_action.dart
lib/providers/state/: app_config_state.dart  edit_providers_state.dart  navigation_state.dart  proxy_groups_state.dart  (+2 more)
lib/views/: access.dart  backup_and_restore.dart  logs.dart  theme.dart
lib/widgets/: button.dart  card.dart  color_scheme_box.dart  list.dart  popup.dart  scaffold.dart  scroll.dart  sheet.dart  subscription_info_view.dart  theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
plugins/flutter_secure_storage_windows/: CHANGELOG.md  README.md  pubspec.yaml
plugins/flutter_secure_storage_windows/windows/test/: CMakeLists.txt  flutter_secure_storage_windows_plugin_test.cpp
plugins/proxy/: pubspec.yaml
plugins/rust_api/: pubspec.yaml
plugins/rust_api/rust/: Cargo.toml
plugins/rust_api/rust/src/: frb_generated.rs
plugins/rust_api/rust/src/api/: ipc.rs  mod.rs  script_runtime.rs
plugins/setup/: pubspec.yaml
services/helper/: Cargo.toml
services/helper/src/: main.rs
services/helper/src/service/: hub.rs  mod.rs  windows.rs
test/: application_test.dart  setup_test.dart  state_initialization_test.dart
test/common/: clear_transaction_test.dart  compute_test.dart  durable_file_test.dart  file_test.dart  fixed_test.dart  function_test.dart  future_test.dart  http_test.dart  iterable_test.dart  javascript_test.dart  launch_test.dart  link_test.dart  path_test.dart  picker_test.dart  preferences_test.dart  request_test.dart  resource_limits_test.dart  restore_transaction_test.dart  system_test.dart  task_test.dart  tray_test.dart
test/core/: controller_test.dart  event_test.dart  interface_test.dart  lib_test.dart  service_test.dart  transport_test.dart
test/database/: database_test.dart
test/enum/: enum_test.dart
test/manager/: android_manager_test.dart  app_manager_test.dart  core_manager_test.dart  hotkey_manager_test.dart  status_manager_test.dart  tile_manager_test.dart
test/models/: clash_config_test.dart  common_test.dart  core_test.dart  profile_test.dart
test/plugins/: app_test.dart  service_test.dart  tile_test.dart
test/providers/: action_test.dart  app_test.dart  backup_action_test.dart  config_test.dart  core_action_test.dart  database_test.dart  proxies_geo_action_test.dart  setup_lifecycle_test.dart  store_action_test.dart  system_action_test.dart
test/views/: backup_and_restore_test.dart
test/widgets/: network_detection_test.dart  periodic_views_test.dart  proxies_delay_test_progress_test.dart  proxies_mode_switch_test.dart  proxies_scroll_position_test.dart  proxy_geo_card_test.dart  rule_editor_test.dart  stream_lists_test.dart  subscription_info_view_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+93 files in other folders)
