[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helper"
path = "src/main.rs"

[dependencies]
windows-service = { version = "0.7.0", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
warp = "0.3.7"
serde = { version = "1.0.215", features = ["derive"] }
once_cell = "1.20.2"
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
