[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
hmac = "0.12"
interprocess = "2"
rquickjs = "0.12.1"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
